[gd_scene load_steps=9 format=3 uid="uid://df45yanaipid"]

[ext_resource type="PackedScene" uid="uid://busjvgjgilmp3" path="res://scenes/components/game_borders.tscn" id="1_7huaw"]
[ext_resource type="Script" path="res://scripts/level_5.gd" id="1_dxftn"]
[ext_resource type="PackedScene" uid="uid://c71se0nqoim42" path="res://scenes/components/empty_tile_map.tscn" id="1_hr3o3"]
[ext_resource type="PackedScene" uid="uid://c2qevafp5drm4" path="res://scenes/components/exit_area.tscn" id="2_a0nul"]
[ext_resource type="PackedScene" uid="uid://bi5deb2iy8e4l" path="res://scenes/components/laser_beam.tscn" id="2_ckyyr"]
[ext_resource type="PackedScene" uid="uid://jqcaoee85fv4" path="res://scenes/components/activation_plate.tscn" id="2_sx4yr"]
[ext_resource type="PackedScene" uid="uid://kg54s01ginlu" path="res://scenes/components/chest.tscn" id="3_74grq"]
[ext_resource type="Texture2D" uid="uid://bfke3di2b1yck" path="res://assets/img/ice_chest_16-24px.png" id="4_ti0fl"]

[node name="Level5" type="Node2D"]
script = ExtResource("1_dxftn")

[node name="Objects" type="Node2D" parent="."]

[node name="ActivationPlate" parent="Objects" instance=ExtResource("2_sx4yr")]
position = Vector2(63, 96)

[node name="ActivationPlate2" parent="Objects" instance=ExtResource("2_sx4yr")]
position = Vector2(87, 96)

[node name="ActivationPlate3" parent="Objects" instance=ExtResource("2_sx4yr")]
position = Vector2(309, 60)

[node name="LaserBeam" parent="Objects" instance=ExtResource("2_ckyyr")]
position = Vector2(240, 213)

[node name="LaserBeam2" parent="Objects" instance=ExtResource("2_ckyyr")]
position = Vector2(132, 213)
rotation = 3.14159

[node name="LaserBeam3" parent="Objects" instance=ExtResource("2_ckyyr")]
position = Vector2(114, 69)

[node name="LaserBeam4" parent="Objects" instance=ExtResource("2_ckyyr")]
position = Vector2(186, 240)
rotation = 1.5708
scale = Vector2(1, 2.5)

[node name="LaserBeam5" parent="Objects" instance=ExtResource("2_ckyyr")]
position = Vector2(186, 186)
rotation = -1.5708
scale = Vector2(1, 2.5)

[node name="Chest" parent="Objects" instance=ExtResource("3_74grq")]
position = Vector2(140, 200)
max_speed = 30.0
chest_texture = ExtResource("4_ti0fl")

[node name="Chest2" parent="Objects" instance=ExtResource("3_74grq")]
position = Vector2(156, 256)
max_speed = 30.0
chest_texture = ExtResource("4_ti0fl")

[node name="Chest3" parent="Objects" instance=ExtResource("3_74grq")]
position = Vector2(267, 267)
max_speed = 30.0
chest_texture = ExtResource("4_ti0fl")

[node name="Map" type="Node2D" parent="."]

[node name="TileMap" parent="Map" instance=ExtResource("1_hr3o3")]
layer_0/tile_data = PackedInt32Array(65536, 327680, 1, 65537, 327680, 1, 65538, 262144, 1, 458762, 0, 1, 655370, 0, 1, 458756, 0, 1, 655364, 0, 1, 131075, 196608, 1, 917518, 0, 1, 393219, 262144, 0, 131081, 393216, 1, 131082, 524288, 0, 131083, 458752, 1, 196619, 131072, 1, 196618, 458752, 0, 196617, 65536, 1, 65545, 65536, 0, 65546, 393216, 0, 65547, 131072, 0, 131077, 327680, 1, 131078, 262144, 1, 131086, 65536, 0, 131076, 327680, 1, 327688, 0, 1, 196622, 393216, 1, 262158, 65536, 1, 720908, 65536, 1, 655372, 65536, 0, 655373, 131072, 0, 720909, 131072, 1, 327683, 196608, 0)

[node name="GameBorders" parent="Map" instance=ExtResource("1_7huaw")]

[node name="ExitArea" parent="Map" instance=ExtResource("2_a0nul")]
position = Vector2(60, 60)
rotation = 3.14159

[connection signal="chest_outside" from="Objects/ActivationPlate" to="." method="_on_activation_plate_chest_outside"]
[connection signal="chest_touch" from="Objects/ActivationPlate" to="." method="_on_activation_plate_chest_touch"]
[connection signal="chest_outside" from="Objects/ActivationPlate2" to="." method="_on_activation_plate_2_chest_outside"]
[connection signal="chest_touch" from="Objects/ActivationPlate2" to="." method="_on_activation_plate_2_chest_touch"]
[connection signal="chest_outside" from="Objects/ActivationPlate3" to="." method="_on_activation_plate_3_chest_outside"]
[connection signal="chest_touch" from="Objects/ActivationPlate3" to="." method="_on_activation_plate_3_chest_touch"]
